added modularity from options.json

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 model_list:
-- model_name: ollama/backed
+- model_name: test
   litellm_params:
-    model: ollama/backed
+    user: one
+    model: test
     api_base: http://127.0.0.1:8000
-    stream: true
